fix: dark mode for user and team settings

--- a/src/styles/custom-properties/colors.scss
+++ b/src/styles/custom-properties/colors.scss
@@ -300,5 +300,11 @@
     --primary-h: 217deg;
     --primary-s: 98%;
     --primary-l: 58%;
+    
+    --scheme-main-bis: var(--grey-100);
+    --scheme-main-ter: var(--grey-100);
+    --scheme-invert: var(--grey-900);
+    --scheme-invert-bis: var(--grey-900);
+    --scheme-invert-ter: var(--grey-800);
   }
 }
